syntax = "proto3";

package complete;
option go_package = "github.com/BobuSumisu/aho-corasick/api";

service Complete {
  rpc Complete(CompleteRequest) returns (CompleteResponses) {}
}

message CompleteRequest {
  repeated string inputs = 1;
  int32 count = 2;
  bool debug = 3;
}

message CompleteResponse {
  string input = 1;
  int32 count = 2;
  repeated HashTag hashtags = 3;
  repeated AhoCorasickMatch matches = 4;
  int64 match_duration_ns = 5;
  int64 suggest_duration_ns = 6;
}

message CompleteResponses {
  repeated CompleteResponse response = 1;
}

message HashTag {
  string name = 1;
  int32 count = 2;
}

message AhoCorasickMatch {
  int32 pos = 1;
  string word = 2;
}